apply generic
